@@ -123,6 +123,7 @@ We'll add it back when project opening functionality is working.
                         --add-exports javafx.graphics/com.sun.javafx.sg.prism=ALL-UNNAMED
                         --add-exports javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED
                         --add-exports javafx.graphics/com.sun.javafx.util=ALL-UNNAMED
+                        --add-exports javafx.graphics/com.sun.prism=ALL-UNNAMED
                         --add-exports javafx.base/com.sun.javafx.logging=ALL-UNNAMED
                         --add-exports javafx.web/com.sun.javafx.sg.prism.web=ALL-UNNAMED
                         --add-exports javafx.web/com.sun.webkit=ALL-UNNAMED
@@ -140,6 +141,7 @@ We'll add it back when project opening functionality is working.
                         --add-opens javafx.graphics/com.sun.javafx.sg.prism=ALL-UNNAMED
                         --add-opens javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED
                         --add-opens javafx.graphics/com.sun.javafx.util=ALL-UNNAMED
+                        --add-opens javafx.graphics/com.sun.prism=ALL-UNNAMED
                         --add-opens javafx.base/com.sun.javafx.logging=ALL-UNNAMED
                         --add-opens javafx.web/com.sun.javafx.sg.prism.web=ALL-UNNAMED
                         --add-opens javafx.web/com.sun.webkit=ALL-UNNAMED
@@ -219,6 +221,8 @@ We'll add it back when project opening functionality is working.
                         <option>--add-exports</option>
                         <option>javafx.graphics/com.sun.javafx.util=ALL-UNNAMED</option>
                         <option>--add-exports</option>
+                        <option>javafx.graphics/com.sun.prism=ALL-UNNAMED</option>
+                        <option>--add-exports</option>
                         <option>javafx.base/com.sun.javafx.logging=ALL-UNNAMED</option>
                         <option>--add-exports</option>
                         <option>javafx.web/com.sun.javafx.sg.prism.web=ALL-UNNAMED</option>
@@ -244,6 +248,8 @@ We'll add it back when project opening functionality is working.
                         <option>javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED</option>
                         <option>--add-opens</option>
                         <option>javafx.graphics/com.sun.javafx.util=ALL-UNNAMED</option>
+                        <option>--add-opens</option>
+                        <option>javafx.graphics/com.sun.prism=ALL-UNNAMED</option>
                         <option>--add-opens</option>
                         <option>javafx.base/com.sun.javafx.logging=ALL-UNNAMED</option>
                         <option>--add-opens</option>
@@ -303,6 +309,8 @@ We'll add it back when project opening functionality is working.
                         <option>--add-exports</option>
                         <option>javafx.graphics/com.sun.javafx.util=ALL-UNNAMED</option>
                         <option>--add-exports</option>
+                        <option>javafx.graphics/com.sun.prism=ALL-UNNAMED</option>
+                        <option>--add-exports</option>
                         <option>javafx.base/com.sun.javafx.logging=ALL-UNNAMED</option>
                         <option>--add-exports</option>
                         <option>javafx.web/com.sun.javafx.sg.prism.web=ALL-UNNAMED</option>
@@ -328,6 +336,8 @@ We'll add it back when project opening functionality is working.
                         <option>javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED</option>
                         <option>--add-opens</option>
                         <option>javafx.graphics/com.sun.javafx.util=ALL-UNNAMED</option>
+                        <option>--add-opens</option>
+                        <option>javafx.graphics/com.sun.prism=ALL-UNNAMED</option>
                         <option>--add-opens</option>
                         <option>javafx.base/com.sun.javafx.logging=ALL-UNNAMED</option>
                         <option>--add-opens</option>
